--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2018"
 [dependencies]
 base64 = "0.12.0"
 hyper = "0.13.3"
+nom = "5.1.1"
 reqwest = { version = "0.10.4", features = ["json"] }
+snafu = "0.6.3"
 structopt = "0.3.11"
 tokio = { version = "0.2.13", features = ["macros"] }
 log = "0.4"
