--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 base64 = "0.12.0"
+futures = "0.3.4"
 hyper = "0.13.3"
 nom = "5.1.1"
 reqwest = { version = "0.10.4", features = ["json"] }
