--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ base64 = "0.12.0"
 bytes = "0.5.4"
 futures = "0.3.4"
 hyper = "0.13.3"
+indicatif = "0.14.0"
 nom = "5.1.1"
 reqwest = { version = "0.10.4", features = ["json", "native-tls", "rustls-tls"] }
 rust-crypto = "0.2.36"
